--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@ui5/webcomponents-icons": "^1.0.0",
     "@ui5/webcomponents-react": "^0.20.0",
     "@ui5/webcomponents-react-base": "^0.20.0",
+    "@ui5/webcomponents-react-charts": "^0.20.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3"
