--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ui5/webcomponents-react-charts": "^0.20.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3"
   },
   "scripts": {
